--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <button id="rows">show rows</button>
     <button id="clear">clear lines</button>
 </div>
+
+<script type="text/javascript" src="./js/core.js"></script>
 <script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
