--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button id="cols">show columns</button>
     <button id="rows">show rows</button>
     <button id="clear">clear lines</button>
+    <button id="del">delete lines</button>
 </div>
 
 <script type="text/javascript" src="./js/core.js"></script>
