--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta name="email" content="barret.china@gmail.com" />
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
 </head>
-
+<!--[IF LT IE 9]>
+<h2 style="display:block;text-align:center;line-height:100px;">您的浏览器版本过低，请使用 非IE浏览器 或 IE9以上的版本 或 切换到高速模式。</h2>
+<style>
+    body * {display:none;}
+</style>
+<![ENDIF]-->
 <body>
     <div class="header">
         <iframe allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="20px" class="github-star"></iframe>
