--- a/index_cn.html
+++ b/index_cn.html
@@ -2,12 +2,12 @@
 <head>
     <meta charset="utf8" />
     <title>Super Marker</title>
-    <meta name="author" content="Barret Lee" />
+    <meta name="author" content="小胡子哥" />
     <meta name="email" content="barret.china@gmail.com" />
     <link rel="stylesheet" type="text/css" href="./src/css/main.css" />
 </head>
 <!--[IF LT IE 9]>
-<h2 style="display:block;text-align:center;line-height:100px;">Your browser version is too low, please use a non IE browser or IE9 and above version or switch to the high speed mode.</h2>
+<h2 style="display:block;text-align:center;line-height:100px;">您的浏览器版本过低，请使用 非IE浏览器 或 IE9以上的版本 或 切换到高速模式。</h2>
 <style>
     body * {display:none;}
 </style>
