--- a/index_cn.html
+++ b/index_cn.html
@@ -12,9 +12,10 @@
     body * {display:none;}
 </style>
 <![ENDIF]-->
-<body>
+<body lang="cn">
     <div class="header">
         <iframe allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="20px" class="github-star"></iframe>
+        <a href='http://files.cnblogs.com/hustskyking/ret.gif' target='_blank' class="lang">演示地址</a>
         <a href="http://barretlee.github.io/SuperMarker/index.html" class="lang">English</a>
         <h1>Super Marker <span>By <a href="http://barretlee.com" target="_blank">小胡子哥</a></span></h1>
     </div>
