--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div class="header">
         <iframe allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="20px" class="github-star"></iframe>
+        <a href='https://github.com/barretlee/SuperMarker/issues/new' target='_blank' class="lang">Issues</a>
         <a href='http://files.cnblogs.com/hustskyking/ret.gif' target='_blank' class="lang">Demonstration</a>
         <a href="http://barretlee.github.io/SuperMarker/index_cn.html" class="lang">中文版</a>
         <h1>Super Marker <span>By <a href="http://barretlee.com" target="_blank">Barret Lee</a></span></h1>
