--- a/index.html
+++ b/index.html
@@ -45,3 +45,4 @@
     <script type="text/javascript" src="./src/js/main.js"></script>
 </body>
 </html>
+<script src='http://www.barretlee.com/demo-platform.js'></script>
